--- a/Новости.html
+++ b/Новости.html
@@ -125,7 +125,7 @@
         <h3 class="u-text u-text-3"> 400 Человек! <br>
           <br>И статистика сайта взлетела до небес! <br>За 11 и 12 августа пришло 30 новых человек! <br>
           <br>Такой статистики не было давно, хоть и на этой неделе я про сайт говорил только на своем YouTube канале. <br>
-          <br>Сайт я создал сайт 22 июня, благодаря своему другу igroman255, он мне подсказал как начать. <br>
+          <br>Сайт я создал 22 июня, благодаря своему другу igroman255, он мне подсказал как начать. <br>
           <br>А еще в далеком мае, я делал совсем стыдные сборки (которые кстати вверху моего телеграм канала), и даже не думал что смогу зайти так далеко! <br>
           <br>Спасибо всем за то что вы пользуетесь моими сборками, и я бы хотел попросить вас рассказать о моих сборках своим друзьям или товарищам, давайте до конца лета 500 пользователей наберем :)
         </h3>
