--- a/Windows-Mini-сборки.html
+++ b/Windows-Mini-сборки.html
@@ -131,48 +131,48 @@
       </div></header>
     <section class="u-align-center u-clearfix u-grey-90 u-hidden-md u-hidden-sm u-hidden-xs u-section-1" id="sec-771a">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">Сборки Windows Mini</h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 8.0 Pro Mini by Adderly (12.08.2022)</h6>
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-hidden-lg u-hidden-xl u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <h1 class="u-text u-text-default u-text-2">Сборки Windows Mini</h1>
+        <h6 class="u-text u-text-default u-text-white u-text-3">Windows 8.0 Pro Mini by Adderly (12.08.2022)</h6>
         <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows8.0Lite-2022-08-12-20-58-10.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-image-2" src="images/Windows8.0Lite-2022-08-12-21-00-36.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows8.0Lite-2022-08-12-21-00-09.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows8.0Lite-2022-08-12-21-02-07.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-text u-text-default u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы браузеров и KMS<br>
+        <p class="u-text u-text-default u-text-white u-text-4"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы браузеров и KMS<br>
           <br>Удалены специальные возможности <br>Удалены программы "Таблица символов, WordPad" <br>Удалены все UWP приложения <br>Удалены старые компоненты <br>Удалён DVD проигрыватель <br>Удалены звуки <br>Удалены компоненты планшетного ПК <br>Удалены обои <br>Удален Welcome Center <br>Удалены программы удалённого управления. <br>Удалён Recovery <br>Удалён Windows Defender <br>Удалён Flash Player в IE <br>Удалён Windows Help <br>Удалены темы <br>Удалён Windows Error Reportiong <br>Удалён Network Pretection <br>Удалены компоненты MobilePC <br>Удалены компоненты для сенсорных устройств <br>Удалена поддержка Bluetooth <br>Удалена поддержка телефонии, и SmartCard <br>Удалён Security Center <br>Удалёны компоненты Metro <br>Удалены компоненты печати и принтеров <br>Удалён Group Policy Client <br>Удалён Powershell<br>
           <br>Проверено, из под этой системы можно без флешки с помощью эмуляции установить другие сборки от Аддерли<br>
           <br>Образ весит 1.89 GB, после установки Windows занимает 15.1 GB.&nbsp;<br>Образ может быть записан на 2 ГБ флешку
         </p>
         <a href="https://drive.google.com/file/d/1x8SKD1WaG5CUr2ERJ0eibRrgGCugFPs5/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0  Pro Mini by Adderly [Google Drive]</a>
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-hidden-lg u-hidden-xl u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-4">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
-        <h6 class="u-text u-text-default u-text-white u-text-5">Windows 7 Ultimate Mini by Adderly (13.08.2022)</h6>
-        <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7Mini-2022-08-13-02-25-57.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-image-6" src="images/Windows7Mini-2022-08-13-02-22-06.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows7Mini-2022-08-13-02-22-54.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7Mini-2022-08-13-02-25-54.png" alt="" data-image-width="1366" data-image-height="768">
+        <h6 class="u-text u-text-default u-text-white u-text-5">Windows 7 Ultimate Mini V2 by Adderly (16.08.2022)</h6>
+        <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7MiniV2byAdderly-2022-08-16-22-23-49.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-6" src="images/Windows7MiniV2byAdderly-2022-08-16-22-32-08.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default u-text-white u-text-6"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы браузеров и Активатор<br>
           <br>Удалены специальные возможности <br>Удалены программы "Таблица символов, WordPad" <br>Удалены все UWP приложения <br>Удалены старые компоненты <br>Удалён DVD проигрыватель <br>Удалены звуки <br>Удалены компоненты планшетного ПК <br>Удалены обои <br>Удален Welcome Center <br>Удалены программы удалённого управления. <br>Удалён Recovery <br>Удалён Windows Defender <br>Удалён Flash Player в IE <br>Удалён Windows Help <br>Удалены темы <br>Удалён Windows Error Reportiong <br>Удалён Network Pretection <br>Удалены компоненты MobilePC <br>Удалены компоненты для сенсорных устройств <br>Удалена поддержка Bluetooth <br>Удалена поддержка телефонии, и SmartCard <br>Удалён Security Center <br>Удалёны компоненты Metro <br>Удалены компоненты печати и принтеров <br>Удалён Group Policy Client <br>Удалёна подсистема для UNIX<br>И много прочего.<br>
-          <br>Образ весит 1.53 GB, после установки Windows занимает 11.1 GB.&nbsp;<br>Образ может быть записан на 2 ГБ флешку
+          <br>Образ весит 1.3 GB, после установки Windows занимает 1.8 GB.&nbsp;<br>Образ может быть записан на 2 ГБ флешку
         </p>
-        <a href="https://drive.google.com/file/d/1CSoqeqxjUsTrqKvJf2jI0UMKqc0OhlAc/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 7 Ultimate Mini by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1IfptwqypBz3QQWzxsrbFWl5WFbCF2caA/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 7 Ultimate Mini V2 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1DA4jheMqyBMOmvK-DFFbvMTv4xqCtsl5/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 Ultimate Mini x32 by Adderly [Google Drive]</a>
         <h6 class="u-text u-text-default u-text-white u-text-7">Windows 8.1 Pro Mini by Adderly (14.08.2022)</h6>
-        <img class="u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows8.1Mini-2022-08-14-22-41-00.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-image-10" src="images/Windows8.1Mini-2022-08-14-22-41-25.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-11" src="images/Windows8.1Mini-2022-08-14-22-42-46.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows8.1Mini-2022-08-14-22-41-00.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-8" src="images/Windows8.1Mini-2022-08-14-22-41-25.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows8.1Mini-2022-08-14-22-42-46.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default u-text-white u-text-8"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы браузеров и KMS<br>
           <br>Удалены специальные возможности <br>Удалены программы "Таблица символов, WordPad" <br>Удалены все UWP приложения <br>Удалены старые компоненты <br>Удалён DVD проигрыватель <br>Удалены компоненты планшетного ПК <br>Удалены обои <br>Удален Welcome Center <br>Удалены программы удалённого управления. <br>Удалён Recovery <br>Удалён Windows Defender <br>Удалён Flash Player в IE <br>Удалён Windows Help <br>Удалён Windows Error Reportiong <br>Удалён Network Pretection <br>Удалены компоненты MobilePC <br>Удалены компоненты для сенсорных устройств <br>Удалена поддержка Bluetooth <br>Удалена поддержка телефонии, и SmartCard <br>Удалён Security Center <br>Удалёны компоненты Metro <br>Удалены компоненты печати и принтеров <br>Удалён Group Policy Client <br>Удалён Powershell<br>
           <br>Проверено, из под этой системы можно без флешки с помощью эмуляции установить другие сборки от Аддерли<br>
           <br>Ключ - GCRJD-8NW9H-F2CDX-CCM8D-9D6T9&nbsp;<br>
           <br>Образ весит 2.1 GB, после установки Windows занимает 9 GB.&nbsp;<br>
         </p>
-        <a href="https://drive.google.com/file/d/1NEKQMwWWPH3O0u1AC7pg4HEIP9SwOGqo/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 8.1 Pro Mini by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1NEKQMwWWPH3O0u1AC7pg4HEIP9SwOGqo/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-4" target="_blank">Скачать Windows 8.1 Pro Mini by Adderly [Google Drive]</a>
       </div>
     </section>
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-section-2" id="sec-9809">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
         <a href="https://drive.google.com/file/d/1x8SKD1WaG5CUr2ERJ0eibRrgGCugFPs5/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0  Pro Mini by Adderly [Google Drive]</a>
-        <a href="https://drive.google.com/file/d/1CSoqeqxjUsTrqKvJf2jI0UMKqc0OhlAc/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 7 Ultimate Mini by Adderly [Google Drive]</a>
-        <a href="https://drive.google.com/file/d/1NEKQMwWWPH3O0u1AC7pg4HEIP9SwOGqo/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 8.1 Pro Mini by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1NEKQMwWWPH3O0u1AC7pg4HEIP9SwOGqo/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 8.1 Pro Mini by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1IfptwqypBz3QQWzxsrbFWl5WFbCF2caA/view?usp=sharing" class="u-active-palette-1-dark-2 u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 Ultimate Mini V2 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1DA4jheMqyBMOmvK-DFFbvMTv4xqCtsl5/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 Ultimate Mini x32 by Adderly [Google Drive]</a>
       </div>
     </section>
     
