--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
         <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-19" target="_blank">Сборки от Аддерли YouTube</a>
         <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-20">Обзоры и отзывы о Сборках от Аддерли</a>
         <h4 class="u-text u-text-body-alt-color u-text-2">Подпишись! </h4>
-        <h3 class="u-align-center-xl u-text u-text-white u-text-3">Последний ролик</h3>
+        <h3 class="u-text u-text-white u-text-3">Последний ролик</h3>
         <div class="u-align-center u-preserve-proportions u-video u-video-contain u-video-1">
           <div class="embed-responsive embed-responsive-1">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/gHY-d0RYUsc?mute=1&amp;showinfo=0&amp;controls=0&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/gHY-d0RYUsc?mute=1&amp;showinfo=0&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
       </div>
