--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -133,7 +133,7 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-0039" data-image-width="1920" data-image-height="1200">
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-0039" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 8.0<br>
         </h1>
@@ -144,7 +144,7 @@
         <img class="u-expanded-width-md u-image u-image-default u-image-3" src="images/Windows8.0byAdderly-2022-08-15-18-03-11.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-image u-image-default u-image-4" src="images/Windows8.0byAdderly-2022-08-15-18-03-52.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-image u-image-default u-image-5" src="images/2022-08-15180806.png" alt="" data-image-width="596" data-image-height="256">
-        <p class="u-align-center-xl u-text u-text-default u-text-white u-text-3">Добавлена папка KMS <br>
+        <p class="u-text u-text-default u-text-white u-text-3">Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных программ <br>
           <br>Интегрирован Framework 4.6, 3.5, 3.0, 2.0<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
