--- a/Новости.html
+++ b/Новости.html
@@ -131,38 +131,46 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-hidden-sm u-hidden-xs u-palette-1-dark-1 u-section-1" id="sec-f077">
-      <div class="u-clearfix u-sheet u-sheet-1">
+    <section class="u-align-center u-clearfix u-palette-1-dark-1 u-section-1" id="sec-f077">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Новости Аддерли</h1>
-        <h5 class="u-text u-text-default-lg u-text-default-xl u-text-2">Дата: 15.08.2022</h5>
-        <h3 class="u-align-left u-text u-text-3"> Новая версия сборки - Windows 11 V3 21H2 by Adderly! <br>Во всех сборках я обновил набор программ, а так же больше не выключал Internet Explorer и Media Player! <br>
+        <h5 class="u-align-center-xl u-text u-text-2">Дата: 27.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-3">На сайте уже больше 600 человек! <br>Я очень благодарен каждому пользователю, который посещает сайт, чтобы что нибудь бесплатно приобрести, но так же, меня можно поддержать, сайт украинский, и если вы из россии, то включите впн! <br>Спасибо каждому заранее, кто поддержит парой гривен!
+        </h3>
+        <img class="u-expanded-width u-image u-image-default u-image-1" src="images/photo_2022-08-27_12-27-13.jpg" alt="" data-image-width="598" data-image-height="307">
+        <a href="https://donatello.to/adderly" class="u-border-none u-btn u-button-style u-custom-color-11 u-btn-1">Поддержать</a>
+        <h5 class="u-text u-text-4">Дата: 19.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-5">510 человек! Я не успел заскринить 500 к сожалению, я вам очень благодарен!</h3>
+        <img class="u-expanded-width u-image u-image-default u-image-2" src="images/photo_2022-08-19_12-02-21.jpg" alt="" data-image-width="713" data-image-height="371">
+        <h5 class="u-text u-text-6">Дата: 15.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-7"> Новая версия сборки - Windows 11 V3 21H2 by Adderly! <br>Во всех сборках я обновил набор программ, а так же больше не выключал Internet Explorer и Media Player! <br>
           <br>Скорее всего, больше обновлений сборок не будет ближайший месяц, так как сборки абсолютно не нуждаются в обновлениях, так как выбор программ уже огромный, и все уже интегрировано! <br>
           <br>Из всех сборок которые я еще не обновил, остались только: <br>Windows 8.1 Lite x32 <br>Windows 10 1607! <br>
           <br>Эти сборки я оставил в последнюю очередь, потому что это в принципе самый не важные сборки за все что я делал, так как я не видел чтобы их кто то использовал, обычно популярностью пользуются мои сборки 10 21H2 и 11 21H2. <br>
           <br>Возможно я обновлю 10 1607, и 8.1 Lite, но вряд-ли. <br>
           <br>Так что, я все следующее время, буду в основном обновлять только сайт, чтобы было его смотреть все так же интересно как и раньше, спасибо всем за время, и за то что вы используете мои сборки!
         </h3>
-        <h5 class="u-text u-text-default-lg u-text-default-xl u-text-4">Дата: 14.08.2022</h5>
-        <h3 class="u-align-left u-text u-text-5">Я наконец закончил свою идею с Windows Mini, хоть и не таким хорошим концом, так как 8.1 весит больше 2 ГБ, так же не вышла одна сборка.<br>
+        <h5 class="u-text u-text-default-lg u-text-default-xl u-text-8">Дата: 14.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-9">Я наконец закончил свою идею с Windows Mini, хоть и не таким хорошим концом, так как 8.1 весит больше 2 ГБ, так же не вышла одна сборка.<br>
           <br>Спустя полтора месяца я все таки смог сделать новые версии Windows 10 21H2, и 1709! Проблема уже решена, и теперь её можно ставить абсолютно спокойно, и мне за сборки десяток больше не стыдно! :D<br>
           <br>Эмоции были очень хорошии, после того как я почувствовал победу над кривой десяткой!<br>
           <br>Остались только:<br>Windows 8.0 V2 by Adderly<br>и Windows 11 V3 by Adderly!<br>
           <br>И наконец можно будет уйти в так называемый "отпук", хотя к сожалению это не отпуск, а 9 класс :(
         </h3>
-        <h5 class="u-text u-text-default u-text-6">Дата: 13.08.2022</h5>
-        <h3 class="u-align-left u-text u-text-7"> 400 Человек! <br>
+        <h5 class="u-text u-text-default u-text-10">Дата: 13.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-11"> 400 Человек! <br>
           <br>И статистика сайта взлетела до небес! <br>За 11 и 12 августа пришло 30 новых человек! <br>
           <br>Такой статистики не было давно, хоть и на этой неделе я про сайт говорил только на своем YouTube канале. <br>
           <br>Сайт я создал 22 июня, благодаря своему другу igroman255, он мне подсказал как начать. <br>
           <br>А еще в далеком мае, я делал совсем стыдные сборки (которые кстати вверху моего телеграм канала), и даже не думал что смогу зайти так далеко! <br>
           <br>Спасибо всем за то что вы пользуетесь моими сборками, и я бы хотел попросить вас рассказать о моих сборках своим друзьям или товарищам, давайте до конца лета 500 пользователей наберем :)
         </h3>
-        <img class="u-expanded-width u-image u-image-default u-image-1" src="images/photo_2022-08-13_11-24-47.jpg" alt="" data-image-width="713" data-image-height="369">
-        <h5 class="u-text u-text-default u-text-8">Дата: 11.08.2022</h5>
-        <h3 class="u-align-left u-text u-text-9">Всем снова привет! Я решил попробовать открыть раздачу торрента Windows 11, но к сожалению у меня проблема с тем, что именно я раздавать не могу, и нужно чтобы это делал кто-то другой.<br>
+        <img class="u-expanded-width u-image u-image-default u-image-3" src="images/photo_2022-08-13_11-24-47.jpg" alt="" data-image-width="713" data-image-height="369">
+        <h5 class="u-text u-text-default u-text-12">Дата: 11.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-13">Всем снова привет! Я решил попробовать открыть раздачу торрента Windows 11, но к сожалению у меня проблема с тем, что именно я раздавать не могу, и нужно чтобы это делал кто-то другой.<br>
         </h3>
-        <h5 class="u-text u-text-default u-text-10">Дата: 10.08.2022</h5>
-        <h3 class="u-align-left u-text u-text-11">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
+        <h5 class="u-text u-text-default u-text-14">Дата: 10.08.2022</h5>
+        <h3 class="u-align-left u-text u-text-15">Здравствуйте! Я решил открыть такую вкладку, как "Новости",<br>Чтобы писать какое будет обновление сайта, и какие сборки будут выходить.<br>
           <br>Я планирую сделать Windows 8.1 V5, Windows 7 V4, и 8.0 V2, в которых я обновлю выбор браузеров, и других программ, по просьбе людей.<br>
           <br>Windows 10 и 11, я планирую больше не заниматься, так как Windows 11 довольно трудно у меня собиралась, и на это уходило слишком много времени, а Windows 10 просто для меня не любимая система, и сборки которые я сделал уже идеально готовы для использования, единственное главное правило - Нужно ставить с интернетом.<br>
           <br>А еще, в моих планах сделать Windows 8.1 Mini, и Windows 8.0 Mini, которые будут весить меньше 5 GB, и они будут юзабельны.<br>
@@ -170,7 +178,7 @@
         </h3>
       </div>
     </section>
-    <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-md u-hidden-xl u-section-2" id="sec-d6f2">
+    <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden u-section-2" id="sec-d6f2">
       <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default-sm u-text-default-xs u-text-1">Новости доступны только на ПК, ноутбуках, и планшетах.</h1>
       </div>
