--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </span>
           <br>
         </h1>
-        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-1">Старый софт для Windows XP</a>
+        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-1">Старый софт для Windows XP</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-2">Сборки Windows 7</a>
         <a href="Windows-Mini-сборки.html" data-page-id="751803690" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-3">Сборки Windows Mini</a>
         <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Информация о сборках</a>
@@ -218,7 +218,7 @@
         <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-21" target="_blank">Как устанавливать сборки от Аддерли</a>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-22">Windows PE</a>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
-        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
+        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
       </div>
     </section>
     <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-md u-hidden-xl u-hidden-xs u-image u-section-3" id="sec-09cf" data-image-width="1920" data-image-height="1200">
@@ -251,7 +251,7 @@
         <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-21" target="_blank">Как устанавливать сборки от Аддерли</a>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-22">Windows PE</a>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-23">Ключи от Аддерли</a>
-        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
+        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
       </div>
     </section>
     <section class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-sm u-hidden-xl u-hidden-xs u-image u-section-4" id="sec-cbcb" data-image-width="1920" data-image-height="1200">
@@ -291,7 +291,7 @@
         </div>
         <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-45 u-btn-22">Windows PE</a>
         <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-45 u-btn-23">Ключи от Аддерли</a>
-        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
+        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-24">Старый софт для Windows XP</a>
       </div>
     </section>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xl u-hidden-xs u-image u-section-5" id="sec-b4fa" data-image-width="1920" data-image-height="600">
